// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiscores getHiscores should default type to HiscoreTypes.normal 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should hit the specified hiscore type endpoint 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool_seasonal/index_lite.json",
}
`;

exports[`Hiscores getHiscores should make a GET request 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should make a request with the passed in player name 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should properly parse rank and kills for each boss 1`] = `
{
  "abyssalSire": {
    "kills": 378,
    "rank": 65748,
  },
  "alchemicalHydra": {
    "kills": -1,
    "rank": -1,
  },
  "artio": {
    "kills": -1,
    "rank": -1,
  },
  "barrowsChests": {
    "kills": 399,
    "rank": 122663,
  },
  "bryophyta": {
    "kills": -1,
    "rank": -1,
  },
  "callisto": {
    "kills": -1,
    "rank": -1,
  },
  "calvarion": {
    "kills": -1,
    "rank": -1,
  },
  "cerberus": {
    "kills": 523,
    "rank": 106022,
  },
  "chambersOfXeric": {
    "kills": 5,
    "rank": 272422,
  },
  "chambersOfXericChallengeMode": {
    "kills": -1,
    "rank": -1,
  },
  "chaosElemental": {
    "kills": 6,
    "rank": 208556,
  },
  "chaosFanatic": {
    "kills": 7,
    "rank": 252236,
  },
  "commanderZilyana": {
    "kills": 57,
    "rank": 146262,
  },
  "corporealBeast": {
    "kills": 93,
    "rank": 73969,
  },
  "corruptedGauntlet": {
    "kills": -1,
    "rank": -1,
  },
  "crazyArchaeologist": {
    "kills": -1,
    "rank": -1,
  },
  "dagannothPrime": {
    "kills": 164,
    "rank": 141124,
  },
  "dagannothRex": {
    "kills": 160,
    "rank": 217157,
  },
  "dagannothSupreme": {
    "kills": 162,
    "rank": 142184,
  },
  "derangedArchaeologist": {
    "kills": -1,
    "rank": -1,
  },
  "dukeSucellus": {
    "kills": 300,
    "rank": 23202,
  },
  "gauntlet": {
    "kills": -1,
    "rank": -1,
  },
  "generalGraardor": {
    "kills": 14,
    "rank": 374755,
  },
  "giantMole": {
    "kills": 674,
    "rank": 48926,
  },
  "grotesqueGuardians": {
    "kills": -1,
    "rank": -1,
  },
  "hespori": {
    "kills": 20,
    "rank": 356948,
  },
  "kalphiteQueen": {
    "kills": 33,
    "rank": 178034,
  },
  "kingBlackDragon": {
    "kills": 180,
    "rank": 176585,
  },
  "kraken": {
    "kills": 33,
    "rank": 424295,
  },
  "krilTsutsaroth": {
    "kills": 62,
    "rank": 132471,
  },
  "leviathan": {
    "kills": -1,
    "rank": -1,
  },
  "mimic": {
    "kills": 3,
    "rank": 65947,
  },
  "nex": {
    "kills": 220,
    "rank": 56741,
  },
  "nightmare": {
    "kills": 11,
    "rank": 77383,
  },
  "obor": {
    "kills": -1,
    "rank": -1,
  },
  "phantomMuspah": {
    "kills": -1,
    "rank": -1,
  },
  "phosanisNightmare": {
    "kills": -1,
    "rank": -1,
  },
  "sarachnis": {
    "kills": -1,
    "rank": -1,
  },
  "scorpia": {
    "kills": -1,
    "rank": -1,
  },
  "scurrius": {
    "kills": -1,
    "rank": -1,
  },
  "skotizo": {
    "kills": 12,
    "rank": 336643,
  },
  "spindel": {
    "kills": -1,
    "rank": -1,
  },
  "tempoross": {
    "kills": -1,
    "rank": -1,
  },
  "theatreOfBlood": {
    "kills": -1,
    "rank": -1,
  },
  "theatreOfBloodHardMode": {
    "kills": -1,
    "rank": -1,
  },
  "thermonuclearSmokeDevil": {
    "kills": 62,
    "rank": 205978,
  },
  "tombsOfAmascut": {
    "kills": 39,
    "rank": 99579,
  },
  "tombsOfAmascutExpertMode": {
    "kills": 98,
    "rank": 36703,
  },
  "tzKalZuk": {
    "kills": 1,
    "rank": 66645,
  },
  "tzTokJad": {
    "kills": 7,
    "rank": 143615,
  },
  "vardorvis": {
    "kills": 5,
    "rank": 66926,
  },
  "venenatis": {
    "kills": 191,
    "rank": 46927,
  },
  "vetion": {
    "kills": -1,
    "rank": -1,
  },
  "vorkath": {
    "kills": 134,
    "rank": 316803,
  },
  "whisperer": {
    "kills": -1,
    "rank": -1,
  },
  "wintertodt": {
    "kills": 404,
    "rank": 266195,
  },
  "zalcano": {
    "kills": -1,
    "rank": -1,
  },
  "zulrah": {
    "kills": 690,
    "rank": 141506,
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank and score for each minigame 1`] = `
{
  "bountyHunter": {
    "rank": -1,
    "score": -1,
  },
  "bountyHunterLegacy": {
    "rank": 165558,
    "score": 6,
  },
  "bountyHunterRogues": {
    "rank": -1,
    "score": -1,
  },
  "bountyHunterRoguesLegacy": {
    "rank": 111115,
    "score": 6,
  },
  "clueScrollsAll": {
    "rank": 45547,
    "score": 787,
  },
  "clueScrollsBeginner": {
    "rank": 134534,
    "score": 27,
  },
  "clueScrollsEasy": {
    "rank": 83370,
    "score": 65,
  },
  "clueScrollsElite": {
    "rank": 18793,
    "score": 118,
  },
  "clueScrollsHard": {
    "rank": 12989,
    "score": 454,
  },
  "clueScrollsMaster": {
    "rank": 30942,
    "score": 66,
  },
  "clueScrollsMedium": {
    "rank": 213908,
    "score": 57,
  },
  "deadmanPoints": {
    "rank": -1,
    "score": -1,
  },
  "leaguePoints": {
    "rank": -1,
    "score": -1,
  },
  "lms": {
    "rank": 94198,
    "score": 713,
  },
  "pvpArena": {
    "rank": -1,
    "score": -1,
  },
  "riftsClosed": {
    "rank": 211833,
    "score": 95,
  },
  "soulWarsZeal": {
    "rank": -1,
    "score": -1,
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank, level, and xp for each skill 1`] = `
{
  "agility": {
    "level": 86,
    "rank": 169456,
    "xp": 3721611,
  },
  "attack": {
    "level": 99,
    "rank": 68425,
    "xp": 21036183,
  },
  "construction": {
    "level": 99,
    "rank": 84361,
    "xp": 13039514,
  },
  "cooking": {
    "level": 99,
    "rank": 68090,
    "xp": 14859581,
  },
  "crafting": {
    "level": 99,
    "rank": 84806,
    "xp": 13313368,
  },
  "defence": {
    "level": 99,
    "rank": 45369,
    "xp": 19949489,
  },
  "farming": {
    "level": 99,
    "rank": 185827,
    "xp": 13220403,
  },
  "firemaking": {
    "level": 99,
    "rank": 60409,
    "xp": 14101174,
  },
  "fishing": {
    "level": 99,
    "rank": 115691,
    "xp": 13035921,
  },
  "fletching": {
    "level": 99,
    "rank": 52328,
    "xp": 13486871,
  },
  "herblore": {
    "level": 99,
    "rank": 36574,
    "xp": 13275301,
  },
  "hitpoints": {
    "level": 99,
    "rank": 95836,
    "xp": 35049766,
  },
  "hunter": {
    "level": 84,
    "rank": 255940,
    "xp": 2960985,
  },
  "magic": {
    "level": 99,
    "rank": 53016,
    "xp": 23770079,
  },
  "mining": {
    "level": 96,
    "rank": 115908,
    "xp": 9908599,
  },
  "overall": {
    "level": 2215,
    "rank": 71606,
    "xp": 339225194,
  },
  "prayer": {
    "level": 99,
    "rank": 21139,
    "xp": 13537259,
  },
  "ranged": {
    "level": 99,
    "rank": 132516,
    "xp": 27242315,
  },
  "runecrafting": {
    "level": 86,
    "rank": 162937,
    "xp": 3686547,
  },
  "slayer": {
    "level": 99,
    "rank": 83497,
    "xp": 14425551,
  },
  "smithing": {
    "level": 89,
    "rank": 168385,
    "xp": 5181048,
  },
  "strength": {
    "level": 99,
    "rank": 58900,
    "xp": 30749320,
  },
  "thieving": {
    "level": 91,
    "rank": 181972,
    "xp": 6442443,
  },
  "woodcutting": {
    "level": 99,
    "rank": 95092,
    "xp": 13231866,
  },
}
`;

exports[`Hiscores getHiscores should return skills, minigames, and bosses from a json response 1`] = `
{
  "bosses": {
    "abyssalSire": {
      "kills": 378,
      "rank": 65748,
    },
    "alchemicalHydra": {
      "kills": -1,
      "rank": -1,
    },
    "artio": {
      "kills": -1,
      "rank": -1,
    },
    "barrowsChests": {
      "kills": 399,
      "rank": 122663,
    },
    "bryophyta": {
      "kills": -1,
      "rank": -1,
    },
    "callisto": {
      "kills": -1,
      "rank": -1,
    },
    "calvarion": {
      "kills": -1,
      "rank": -1,
    },
    "cerberus": {
      "kills": 523,
      "rank": 106022,
    },
    "chambersOfXeric": {
      "kills": 5,
      "rank": 272422,
    },
    "chambersOfXericChallengeMode": {
      "kills": -1,
      "rank": -1,
    },
    "chaosElemental": {
      "kills": 6,
      "rank": 208556,
    },
    "chaosFanatic": {
      "kills": 7,
      "rank": 252236,
    },
    "commanderZilyana": {
      "kills": 57,
      "rank": 146262,
    },
    "corporealBeast": {
      "kills": 93,
      "rank": 73969,
    },
    "corruptedGauntlet": {
      "kills": -1,
      "rank": -1,
    },
    "crazyArchaeologist": {
      "kills": -1,
      "rank": -1,
    },
    "dagannothPrime": {
      "kills": 164,
      "rank": 141124,
    },
    "dagannothRex": {
      "kills": 160,
      "rank": 217157,
    },
    "dagannothSupreme": {
      "kills": 162,
      "rank": 142184,
    },
    "derangedArchaeologist": {
      "kills": -1,
      "rank": -1,
    },
    "dukeSucellus": {
      "kills": 300,
      "rank": 23202,
    },
    "gauntlet": {
      "kills": -1,
      "rank": -1,
    },
    "generalGraardor": {
      "kills": 14,
      "rank": 374755,
    },
    "giantMole": {
      "kills": 674,
      "rank": 48926,
    },
    "grotesqueGuardians": {
      "kills": -1,
      "rank": -1,
    },
    "hespori": {
      "kills": 20,
      "rank": 356948,
    },
    "kalphiteQueen": {
      "kills": 33,
      "rank": 178034,
    },
    "kingBlackDragon": {
      "kills": 180,
      "rank": 176585,
    },
    "kraken": {
      "kills": 33,
      "rank": 424295,
    },
    "krilTsutsaroth": {
      "kills": 62,
      "rank": 132471,
    },
    "leviathan": {
      "kills": -1,
      "rank": -1,
    },
    "mimic": {
      "kills": 3,
      "rank": 65947,
    },
    "nex": {
      "kills": 220,
      "rank": 56741,
    },
    "nightmare": {
      "kills": 11,
      "rank": 77383,
    },
    "obor": {
      "kills": -1,
      "rank": -1,
    },
    "phantomMuspah": {
      "kills": -1,
      "rank": -1,
    },
    "phosanisNightmare": {
      "kills": -1,
      "rank": -1,
    },
    "sarachnis": {
      "kills": -1,
      "rank": -1,
    },
    "scorpia": {
      "kills": -1,
      "rank": -1,
    },
    "scurrius": {
      "kills": -1,
      "rank": -1,
    },
    "skotizo": {
      "kills": 12,
      "rank": 336643,
    },
    "spindel": {
      "kills": -1,
      "rank": -1,
    },
    "tempoross": {
      "kills": -1,
      "rank": -1,
    },
    "theatreOfBlood": {
      "kills": -1,
      "rank": -1,
    },
    "theatreOfBloodHardMode": {
      "kills": -1,
      "rank": -1,
    },
    "thermonuclearSmokeDevil": {
      "kills": 62,
      "rank": 205978,
    },
    "tombsOfAmascut": {
      "kills": 39,
      "rank": 99579,
    },
    "tombsOfAmascutExpertMode": {
      "kills": 98,
      "rank": 36703,
    },
    "tzKalZuk": {
      "kills": 1,
      "rank": 66645,
    },
    "tzTokJad": {
      "kills": 7,
      "rank": 143615,
    },
    "vardorvis": {
      "kills": 5,
      "rank": 66926,
    },
    "venenatis": {
      "kills": 191,
      "rank": 46927,
    },
    "vetion": {
      "kills": -1,
      "rank": -1,
    },
    "vorkath": {
      "kills": 134,
      "rank": 316803,
    },
    "whisperer": {
      "kills": -1,
      "rank": -1,
    },
    "wintertodt": {
      "kills": 404,
      "rank": 266195,
    },
    "zalcano": {
      "kills": -1,
      "rank": -1,
    },
    "zulrah": {
      "kills": 690,
      "rank": 141506,
    },
  },
  "minigames": {
    "bountyHunter": {
      "rank": -1,
      "score": -1,
    },
    "bountyHunterLegacy": {
      "rank": 165558,
      "score": 6,
    },
    "bountyHunterRogues": {
      "rank": -1,
      "score": -1,
    },
    "bountyHunterRoguesLegacy": {
      "rank": 111115,
      "score": 6,
    },
    "clueScrollsAll": {
      "rank": 45547,
      "score": 787,
    },
    "clueScrollsBeginner": {
      "rank": 134534,
      "score": 27,
    },
    "clueScrollsEasy": {
      "rank": 83370,
      "score": 65,
    },
    "clueScrollsElite": {
      "rank": 18793,
      "score": 118,
    },
    "clueScrollsHard": {
      "rank": 12989,
      "score": 454,
    },
    "clueScrollsMaster": {
      "rank": 30942,
      "score": 66,
    },
    "clueScrollsMedium": {
      "rank": 213908,
      "score": 57,
    },
    "deadmanPoints": {
      "rank": -1,
      "score": -1,
    },
    "leaguePoints": {
      "rank": -1,
      "score": -1,
    },
    "lms": {
      "rank": 94198,
      "score": 713,
    },
    "pvpArena": {
      "rank": -1,
      "score": -1,
    },
    "riftsClosed": {
      "rank": 211833,
      "score": 95,
    },
    "soulWarsZeal": {
      "rank": -1,
      "score": -1,
    },
  },
  "skills": {
    "agility": {
      "level": 86,
      "rank": 169456,
      "xp": 3721611,
    },
    "attack": {
      "level": 99,
      "rank": 68425,
      "xp": 21036183,
    },
    "construction": {
      "level": 99,
      "rank": 84361,
      "xp": 13039514,
    },
    "cooking": {
      "level": 99,
      "rank": 68090,
      "xp": 14859581,
    },
    "crafting": {
      "level": 99,
      "rank": 84806,
      "xp": 13313368,
    },
    "defence": {
      "level": 99,
      "rank": 45369,
      "xp": 19949489,
    },
    "farming": {
      "level": 99,
      "rank": 185827,
      "xp": 13220403,
    },
    "firemaking": {
      "level": 99,
      "rank": 60409,
      "xp": 14101174,
    },
    "fishing": {
      "level": 99,
      "rank": 115691,
      "xp": 13035921,
    },
    "fletching": {
      "level": 99,
      "rank": 52328,
      "xp": 13486871,
    },
    "herblore": {
      "level": 99,
      "rank": 36574,
      "xp": 13275301,
    },
    "hitpoints": {
      "level": 99,
      "rank": 95836,
      "xp": 35049766,
    },
    "hunter": {
      "level": 84,
      "rank": 255940,
      "xp": 2960985,
    },
    "magic": {
      "level": 99,
      "rank": 53016,
      "xp": 23770079,
    },
    "mining": {
      "level": 96,
      "rank": 115908,
      "xp": 9908599,
    },
    "overall": {
      "level": 2215,
      "rank": 71606,
      "xp": 339225194,
    },
    "prayer": {
      "level": 99,
      "rank": 21139,
      "xp": 13537259,
    },
    "ranged": {
      "level": 99,
      "rank": 132516,
      "xp": 27242315,
    },
    "runecrafting": {
      "level": 86,
      "rank": 162937,
      "xp": 3686547,
    },
    "slayer": {
      "level": 99,
      "rank": 83497,
      "xp": 14425551,
    },
    "smithing": {
      "level": 89,
      "rank": 168385,
      "xp": 5181048,
    },
    "strength": {
      "level": 99,
      "rank": 58900,
      "xp": 30749320,
    },
    "thieving": {
      "level": 91,
      "rank": 181972,
      "xp": 6442443,
    },
    "woodcutting": {
      "level": 99,
      "rank": 95092,
      "xp": 13231866,
    },
  },
}
`;
